# LCServer

GateServer/: AsioIOServicePool.cc  AsioIOServicePool.h  CMakeLists.txt  CServer.cc  CServer.h  ConfigMgr.cc  ConfigMgr.h  HttpConnection.cc  HttpConnection.h  LogicSystem.cc  LogicSystem.h  MysqlDao.cc  MysqlDao.h  MysqlMgr.cc  MysqlMgr.h  VarifyGrpcClient.h  config.ini  const.h  main.cc  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  redispool.cc  redispool.h  singleton.h  snowflake.cc  snowflake.h  sqlconnpool.cc  sqlconnpool.h
VarifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
